Organization of some of the slides

--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -34,6 +34,8 @@
     \uncover<4>{\footnotetext[2]{JavaScript standards aren't actually that standard.}}
 \end{frame}
 
+% TODO: Put the high level stuff here
+
 \begin{frame}
     \frametitle{Variables}
 
@@ -123,6 +125,29 @@
     and then putting everything into that.
 \end{frame}
 
+\begin{frame}
+    \frametitle{Objects}
+
+    JavaScript objects are basically maps.
+
+    % Talk about the prototype chain @ a high level
+\end{frame}
+
+\begin{frame}
+    \frametitle{Functions}
+
+    Functions are just objects with two special properties: a context (scope) and the function code.
+\end{frame}
+
+\begin{frame}
+    \frametitle{Functions: Closure}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Functions: Callback}
+\end{frame}
+
 \begin{frame}[fragile]
     \frametitle{Arrays}
 
@@ -147,22 +172,6 @@
 
 \end{frame}
 
-\begin{frame}
-    \frametitle{Objects}
-
-    JavaScript objects are basically maps.
-\end{frame}
-
-\begin{frame}
-    \frametitle{Functions}
-
-    Functions are just objects with two special properties: a context (scope) and the function code.
-\end{frame}
-
-\begin{frame}
-    \frametitle{Functions: Closure}
-
-\end{frame}
 
 \begin{frame}
     \frametitle{Inheritance}
@@ -188,6 +197,15 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{DOM Manipulation}
+
+    The \textit{Document Object Model} is an API used by JavaScript to interact with the elements of
+    an HTML document.\footnotemark[1]
+
+    \footnotetext[1]{\url{https://en.wikipedia.org/wiki/Document_Object_Model}}
+\end{frame}
+
+\begin{frame}
     \frametitle{Libraries}
 
     There are \textbf{lots} of JavaScript libraries. One of the most widely used is jQuery
@@ -197,15 +215,6 @@
     I also have a few nice prototype overloads in a repository at
     \url{https://github.com/sumnerevans/js-utils} (MIT License).
 
-\end{frame}
-
-\begin{frame}
-    \frametitle{DOM Manipulation}
-
-    The \textit{Document Object Model} is an API used by JavaScript to interact with the elements of
-    an HTML document.\footnotemark[1]
-
-    \footnotetext[1]{\url{https://en.wikipedia.org/wiki/Document_Object_Model}}
 \end{frame}
 
 \begin{frame}
