--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -11,7 +11,7 @@
 }
 
 \title{JavaScript Crash Course}
-\author{Jonathan Sumner Evans}
+\author{Sumner Evans and Sam Sartor}
 
 \begin{document}
 
@@ -62,7 +62,7 @@
 
 \end{frame}
 
-% TODO: Frame on Prototype chain
+% TODO: Talk about Prototype chain
 
 \begin{frame}
     \frametitle{Functions}
